sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/PostfixExpression.sand
pub class PostfixExpression {
    foo() {
        [
            x()!,
            x()?,

            x()!!,
            x()??,
            x()!?,
            x()?!,

            x()!<Foo>,
            x()!<Foo<Bar?, Baz, Qux[]>[+]>,
        ]
    }
}