sandc/test/fixtures/astRegression/shouldFail/productions/isnotExpression/GenericTypeInstantiation.sand
pub class GenericTypeInstantiation {
    foo() {
        x() isnot Foo<Bar>
    }
}